@@ -8,8 +8,8 @@
     :license: BSD, see LICENSE for details.
 """
 
+import ast
 import re
-from io import BytesIO
 
 from pygments.lexer import Lexer
 from pygments.token import Token, Error, Text
@@ -43,9 +43,7 @@ line_re = re.compile('.*?\n')
 
 class RawTokenLexer(Lexer):
     """
-    Recreate a token stream formatted with the `RawTokenFormatter`.  This
-    lexer raises exceptions during parsing if the token stream in the
-    file is malformed.
+    Recreate a token stream formatted with the `RawTokenFormatter`.
 
     Additional options accepted:
 
@@ -67,13 +65,16 @@ class RawTokenLexer(Lexer):
         if self.compress:
             if isinstance(text, str):
                 text = text.encode('latin1')
-            if self.compress == 'gz':
-                import gzip
-                gzipfile = gzip.GzipFile('', 'rb', 9, BytesIO(text))
-                text = gzipfile.read()
-            elif self.compress == 'bz2':
-                import bz2
-                text = bz2.decompress(text)
+            try:
+                if self.compress == 'gz':
+                    import gzip
+                    text = gzip.decompress(text)
+                elif self.compress == 'bz2':
+                    import bz2
+                    text = bz2.decompress(text)
+            except OSError:
+                yield Error, text.decode('latin1')
+        if isinstance(text, bytes):
             text = text.decode('latin1')
 
         # do not call Lexer.get_tokens() because stripping is not optional.
@@ -86,10 +87,6 @@ class RawTokenLexer(Lexer):
         for match in line_re.finditer(text):
             try:
                 ttypestr, val = match.group().rstrip().split('\t', 1)
-            except ValueError:
-                val = match.group()
-                ttype = Error
-            else:
                 ttype = _ttype_cache.get(ttypestr)
                 if not ttype:
                     ttype = Token
@@ -99,6 +96,11 @@ class RawTokenLexer(Lexer):
                             raise ValueError('malformed token name')
                         ttype = getattr(ttype, ttype_)
                     _ttype_cache[ttypestr] = ttype
-                val = val[1:-1].encode().decode('unicode-escape')
+                val = ast.literal_eval(val)
+                if not isinstance(val, str):
+                    raise ValueError('expected str')
+            except (SyntaxError, ValueError):
+                val = match.group()
+                ttype = Error
             yield length, ttype, val
             length += len(val)
